Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4736

Help string for 'minidump_path' flag does not explain SIGUSR1 behavior

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Done
    • Impala 2.7.0
    • Impala 2.11.0
    • Backend, Docs

    Description

      The help string for 'minidump_path', which is defined in be/src/common/global-flags.cc should explain that minidumps are also written when sending a SIGUSR1 signal to the daemons.

      Attachments

        Activity

          People

            csringhofer Csaba Ringhofer
            lv Lars Volker
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: