IMPALA-4736: Add SIGUSR1 behavior to help string for 'minidump_path' flag

Change-Id: I8f4da8ff12c10e4a84a339ddb4036d1682b3a2a0
Reviewed-on: http://gerrit.cloudera.org:8080/8164
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Impala Public Jenkins